Fix textfield outline appearing on safari / firefox

--- a/src/common/layout/container.scss
+++ b/src/common/layout/container.scss
@@ -71,7 +71,7 @@ main {
   align-items: stretch;
   justify-content: space-between;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   @include respond-to('small') {
     min-width: 100%;
     width: 100%;
